# FSAE-influxdb

./: 80-can.network  Cargo.toml  IDBv1.sh  README.md  data.service  data_aq.service  install.sh  install_influx.sh  postCreateCommand.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
