[package]
name = "FSAE-influxdb"
version = "0.1.0"
edition = "2021"

[dependencies]
socketcan = {version = "3.3.0", features = ["tokio"]}
embedded-can = "0.4.1"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4.38"
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.31"